RESOLVED FIXED287121
Store WeakPtr and WeakObjCPtr instead of raw pointers as members of objects
https://bugs.webkit.org/show_bug.cgi?id=287121
Summary Store WeakPtr and WeakObjCPtr instead of raw pointers as members of objects
Alex Christensen
Reported 2025-02-05 16:01:50 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-05 16:02:22 PST
Alex Christensen
Comment 2 2025-02-05 16:04:29 PST
EWS
Comment 3 2025-02-05 19:08:23 PST
Committed 289909@main (9bc59f671b1e): <https://commits.webkit.org/289909@main> Reviewed commits have been landed. Closing PR #40089 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.