Source/WebKit/UIProcess/mac/WKFullScreenWindowController.mm
@@ -266,13 +266,13 @@ ALLOW_DEPRECATED_DECLARATIONS_END
         _webViewPlaceholder = adoptNS([[WebCoreFullScreenPlaceholderView alloc] initWithFrame:[_webView frame]]);
     [_webViewPlaceholder setTarget:nil];
     [_webViewPlaceholder setContents:(__bridge id)webViewContents.get()];
-    [self _saveConstraintsOf:_webView.superview];
-    [self _replaceView:_webView with:_webViewPlaceholder.get()];
+    [self _saveConstraintsOf:[_webView superview]];
+    [self _replaceView:_webView.get().get() with:_webViewPlaceholder.get()];
     
     // Then insert the WebView into the full screen window
     NSView *contentView = [[self window] contentView];
-    [_clipView addSubview:_webView positioned:NSWindowBelow relativeTo:nil];
-    _webView.frame = NSInsetRect(contentView.bounds, 0, -_page->topContentInset());
+    [_clipView addSubview:_webView.get().get() positioned:NSWindowBelow relativeTo:nil];
+    [_webView setFrame:NSInsetRect(contentView.bounds, 0, -_page->topContentInset())];
 
     _savedScale = _page->pageScaleFactor();
     _page->scalePageRelativeToScrollPosition(1, { });
@@ -307,7 +307,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     NSWindow* window = self.window;
     NSWindowCollectionBehavior behavior = [window collectionBehavior];
     [window setCollectionBehavior:(behavior | NSWindowCollectionBehaviorCanJoinAllSpaces)];
-    [window makeFirstResponder:_webView];
+    [window makeFirstResponder:_webView.get().get()];
     [window makeKeyAndOrderFront:self];
     [window setCollectionBehavior:behavior];
 
@@ -358,12 +358,12 @@ ALLOW_DEPRECATED_DECLARATIONS_END
         _page->setSuppressVisibilityUpdates(false);
 
         NSResponder *firstResponder = [[self window] firstResponder];
-        [self _replaceView:_webViewPlaceholder.get() with:_webView];
+        [self _replaceView:_webViewPlaceholder.get() with:_webView.get().get()];
         BEGIN_BLOCK_OBJC_EXCEPTIONS
         [NSLayoutConstraint activateConstraints:self.savedConstraints];
         END_BLOCK_OBJC_EXCEPTIONS
         self.savedConstraints = nil;
-        makeResponderFirstResponderIfDescendantOfView(_webView.window, firstResponder, _webView);
+        makeResponderFirstResponderIfDescendantOfView([_webView window], firstResponder, _webView.get().get());
         [[_webView window] makeKeyAndOrderFront:self];
 
         _page->scalePageRelativeToScrollPosition(_savedScale, { });
@@ -382,7 +382,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
             eventNumber:0
             clickCount:0
             pressure:0];
-        WebKit::NativeWebMouseEvent webEvent(fakeEvent, nil, _webView);
+        WebKit::NativeWebMouseEvent webEvent(fakeEvent, nil, _webView.get().get());
         _page->handleMouseEvent(webEvent);
     }
     _page->flushDeferredResizeEvents();
@@ -518,7 +518,7 @@ static RetainPtr<CGImageRef> takeWindowSnapshot(CGSWindowID windowID, bool captu
     [_exitPlaceholder setLayerContentsRedrawPolicy: NSViewLayerContentsRedrawNever];
     [_exitPlaceholder setFrame:[_webView frame]];
     [[_exitPlaceholder layer] setContents:(__bridge id)webViewContents.get()];
-    [[_webView superview] addSubview:_exitPlaceholder.get() positioned:NSWindowAbove relativeTo:_webView];
+    [[_webView superview] addSubview:_exitPlaceholder.get() positioned:NSWindowAbove relativeTo:_webView.get().get()];
 
     [CATransaction commit];
     [CATransaction flush];
@@ -531,13 +531,13 @@ static RetainPtr<CGImageRef> takeWindowSnapshot(CGSWindowID windowID, bool captu
     [_webView removeFromSuperview];
     [_webView setFrame:[_webViewPlaceholder frame]];
     [_webView setAutoresizingMask:[_webViewPlaceholder autoresizingMask]];
-    [[_webViewPlaceholder superview] addSubview:_webView positioned:NSWindowBelow relativeTo:_webViewPlaceholder.get()];
+    [[_webViewPlaceholder superview] addSubview:_webView.get().get() positioned:NSWindowBelow relativeTo:_webViewPlaceholder.get()];
 
     BEGIN_BLOCK_OBJC_EXCEPTIONS
     [NSLayoutConstraint activateConstraints:self.savedConstraints];
     END_BLOCK_OBJC_EXCEPTIONS
     self.savedConstraints = nil;
-    makeResponderFirstResponderIfDescendantOfView(_webView.window, firstResponder, _webView);
+    makeResponderFirstResponderIfDescendantOfView([_webView window], firstResponder, _webView.get().get());
 
     // These messages must be sent after the swap or flashing will occur during forceRepaint:
     [self _manager]->setAnimatingFullScreen(false);
